# arch-scripts

./: .gitignore  README.md
arch-install/: README.md  before-reboot.sh  chroot-install.sh  install-other-programs.sh  install.sh  pre-installation.sh
arch-install/config/: create-user.sh  enable-systemd-timers.sh  install-additional-programs.sh
arch-install/utils/: msg.sh
backup/: box-backup  disk-backup  utils
config-files/: .bashrc  .profile  .zshrc  README.md  config.fish
installation/: .zsh_plugins  README.md  after-reboot.sh  restore.sh
linux-prog-book/static_lib/: show_number.c  test.c
maintenance/: .gitignore  dev_requirements.txt  fisher_update.fish  maintenance.fish  maintenance.py  maintenance.sh  pyproject.toml  requirements.txt  setup.cfg  trigger_maintenance.fish
maintenance/maintenance/: __main__.py  commands.py  core.py  main.py
miscelaneous/: bateria
miscellaneous/: README.md  battery.sh  check-battery  convert-whatsapp  emacsclient.sh
scripts/linux-prog-book/static_lib/: README  libnumstring.h  show_string.c
