[tool.poetry]
name = "maintenance"
version = "0.1.0"
description = "Keep your nix system up-to-date"
authors = ["Ali Ghahraei <aligf94@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
sh = "^1.12"
colored = "^1.4.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
nix_maintenance = "maintenance:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
