[metadata]
name = maintenance
version: 0.1.0
description = Keep your *nix system up-to-date
author = Ali Ghahraei Figueroa
author_email = aligf94@gmail.com
license = MIT

[options]
install_requires =
    sh
    colored
python_requires = >=3.9

[options.entry_points]
console_scripts =
    nix_maintenance = maintenance:main
